# plotikz-gui

./: README.md  pyproject.toml  test_output.tex  that.tex
src/pt_gui.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/ptg/: __init__.py  __main__.py  cli.py  converter.py  gui.py
