[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pt-gui"
version = "0.1.0"
description = "Convert Plotly HTML interactive plots to TikZ figures"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "plotly>=5.0.0",
    "tikzplotly",
    "PyQt6>=6.0.0",
]

[project.scripts]
ptg = "ptg.cli:main"
ptg-gui = "ptg.gui:main"

[tool.setuptools.packages.find]
where = ["src"]
